[package]
name = "lazuli-example"
version = "0.1.0"
authors = ["SealedL <56763719+SealedL@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.52.0"
piston_window = "0.112.0"
image = "0.23.9"